--- a/test.html
+++ b/test.html
@@ -14,6 +14,15 @@
 </head>
 
 <body >
+    <div class="d1">
+  <iframe
+    width="500"
+    height="300"
+    src="trailer.mp4"
+    allow="autoplay; picture-in-picture"
+    allowfullscreen
+  ></iframe>
+</div>
 
     <div class="d2">
         <div id="myDIV">
